# compline

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/federalist/: Hamilton.margin.md  Hamilton.persona.md  README.md  questions.md
examples/federalist/papers/: federalist-01.md  federalist-02.md  federalist-03.md  federalist-04.md  federalist-05.md  federalist-06.md  federalist-07.md  federalist-08.md  federalist-09.md  federalist-10.md  federalist-11.md  federalist-12.md  federalist-13.md  federalist-14.md  federalist-15.md  federalist-16.md  federalist-17.md  federalist-18.md  federalist-19.md  federalist-20.md  federalist-21.md  federalist-22.md  federalist-23.md  federalist-24.md  federalist-25.md  federalist-26.md  federalist-27.md  federalist-28.md  federalist-29.md  federalist-30.md  federalist-31.md  federalist-32.md  federalist-33.md  federalist-34.md  federalist-35.md  federalist-36.md  federalist-37.md  federalist-38.md  federalist-39.md  federalist-40.md  (+45 more)
scripts/: fetch_federalist.py  run_questions.py
src/compline/: __init__.py  chart.py  cli.py  db.py  engine.py  ingest.py  llm.py  persona.py  retrieve.py
tests/: test_chart.py  test_db.py  test_engine.py  test_ingest.py  test_llm_parse.py  test_persona.py  test_retrieve.py  test_smoke.py
