[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compline"
version = "0.0.0"
description = "AI that gets sharper while you sleep."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Anthony Clendenen" }]
keywords = ["llm", "agents", "personas", "rag", "ooda", "self-improving"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
compline = "compline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/compline"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
